# azure-pages-router

./: .gitignore  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  code-quality.yml  main_cca5-cin-ufpe-br(test-deployment-slot).yml  main_cca5-cin-ufpe-br.yml  main_cin-ufpe-url-router.yml
origin/: .htaccess  index.html  index.php
origin/asllvd-skeleton/: index.html
origin/asllvd-skeleton-20/: index.html
origin/css/: style.css
origin/js/: router.js
router/: host.json  main.py  requirements.txt
router/HttpRouter/: __init__.py  function.json  functions.json  router_helper.py  url_mapping.json
router/url_router/: __init__.py  constants.py  error_handlers.py  error_messages.py  errors.py  router_func.py  router_function.py  router_utils.py  url_mapping.json  url_mapping.jsonc  url_mappings.py  utils.py
router/url_router/pages/: error.html
